Fixed right rail overflow of panel grid-min-max display

--- a/development/scss/scss-framework/_framework.scss
+++ b/development/scss/scss-framework/_framework.scss
@@ -317,6 +317,9 @@ header #brand {
     display: block;
     margin: 0;
   }
+  .grid-wrapper-min-max {
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  }
 }
 
 #main-aside-wrapper[style] {
